--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>TMTheme Editor</title>
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel='stylesheet' href='css/app-f3ef9cc62a20f900b1b653c87da5202e.css'></head>
 <body id="drop_zone" ng-app="ThemeEditor" ng-controller="editorController"
       shortcut='{ "escape": "hide_all_popovers()", "ctrl+n": "toggle_new_rule_popover()" }'>
